err2.txt
cargo : warning: unused variable: `i`
At line:1 char:1
+ cargo check --tests --features c_bridge --message-format=short > 
err. ...
+ 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: unused variable 
   : `i`:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
  --> src\onnx_oracle.rs:39:10
   |
39 |     for (i, (expected, (in_shape, in_data))) in expected_input...
   |          ^ help: if this is intentional, prefix it with an 
underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on 
by default

warning: `omnilang` (lib) generated 1 warning (run `cargo fix --lib 
-p omnilang` to apply 1 suggestion)
warning: `omnilang` (lib test) generated 1 warning (1 duplicate)
    Checking omnilang v1.2.2 (D:\GitHub\OmniLang)
tests\test_ort_dynamic.rs:2:5: warning: unused import: 
`std::collections::HashMap`
tests\test_ort_dynamic.rs:11:17: error[E0308]: `?` operator has 
incompatible types: expected `Value`, found 
`Value<TensorValueType<f32>>`
warning: `omnilang` (test "test_ort_dynamic") generated 1 warning
error: could not compile `omnilang` (test "test_ort_dynamic") due to 
1 previous error; 1 warning emitted
